--- a/package.json
+++ b/package.json
@@ -8,30 +8,30 @@
     "lint": "eslint src --ext .js,.vue,.ts --fix"
   },
   "dependencies": {
-    "@ionic/vue": "^6.0.0-beta.4",
-    "@ionic/vue-router": "^6.0.0-beta.4",
-    "vue": "^3.2.6",
+    "@ionic/vue": "^6.0.0-beta.6",
+    "@ionic/vue-router": "^6.0.0-beta.6",
+    "vue": "^3.2.16",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.394",
-    "@types/node": "^16.7.3",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
+    "@iconify/json": "^1.1.405",
+    "@types/node": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "@vitejs/plugin-vue": "^1.9.1",
+    "@vue/compiler-sfc": "^3.2.16",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-vue": "^7.17.0",
-    "typescript": "^4.4.2",
-    "vite": "^2.5.1",
-    "vite-plugin-components": "^0.13.2",
-    "vite-plugin-icons": "^0.6.5",
-    "vite-plugin-windicss": "^1.3.0",
-    "vue-eslint-parser": "^7.10.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "typescript": "^4.4.3",
+    "vite": "^2.5.10",
+    "unplugin-vue-components": "^0.15.2",
+    "unplugin-icons": "^0.11.3",
+    "vite-plugin-windicss": "^1.4.4",
+    "vue-eslint-parser": "^7.11.0",
     "vue-tsc": "^0.3.0",
     "windicss": "^3.1.7"
   }
